# SpectralBIOs2D

./: CMakeLists.txt  README.md
Experiments/: runAll.sh  runFull.sh  runFull_IPL.sh  runGM.sh  runSerial.sh
Experiments/TestsReportShapeHol/: runAll.sh  runFull.sh  runGM.sh
Postprocessing/: plot_solution.m  solution.txt  solution_1.txt
Sources/: CMakeLists.txt
Sources/BIOsProblems/: DirichletProblem.cpp  DirichletProblem.hpp  NeumannProblem.cpp  NeumannProblem.hpp  TransmissionProblem.hpp
Sources/BayesianInversion/: BayesianInversion.hpp
Sources/BayesianInversion/InverseScatteringBI/: ForwardModel.hpp  PlaneWave.hpp  Potential.hpp  QuantityOfInterest.hpp
Sources/BoundaryPotentials/: BoundaryPotentials.cpp  BoundaryPotentials.hpp
Sources/BoundaryRepresentations/: Boomerang.hpp  Circle.hpp  Fourier.hpp  Kidney.hpp
Sources/BoundaryRepresentations/Old/: Boomerang.hpp  CCoeffAk.hpp  Circle.hpp  Fourier.hpp  Kidney.hpp
Sources/Halton/: a.out  test_h  test_halton.cpp
Sources/MeasurementsFarField/: MeasurementsFarField.cpp  MeasurementsFarField.hpp
Sources/ParametricBoundaryRepresentation/: ParametricBoundaryRepresentation.cpp  ParametricBoundaryRepresentation.hpp
Sources/ParametricBoundaryRepresentation/Test/: ParametricBoundaryRepresentation.cpp  ParametricBoundaryRepresentation.hpp
Sources/Point/: Point.cpp  Point.hpp
Sources/QoIBoundary/: QoIBoundary.cpp  QoIBoundary.hpp
Sources/QoISolution/: QoISolution.cpp  QoISolution.hpp
Sources/Quadrature/: Quadrature.cpp  Quadrature.hpp
Sources/SpectralBIOs/: SpectralBIOs.cpp  SpectralBIOs.hpp  SpectralBIOs_old.cpp
Sources/SpectralBIOs/Test/: TestSpectralBIOs  TestSpectralBIOs.cpp  makefile
Sources/SpectralQuantity/: SpectralQuantity.cpp  SpectralQuantity.hpp
Sources/cmake/Modules/: FindGMP.cmake  FindNTL.cmake
Tests/: CMakeLists.txt  GenerateMeasurements.cpp  TestBIOperations.cpp  TestBI_Halton_Full.cpp  TestBI_IPL_Full.cpp  TestBI_IPL_Serial.cpp  TestDirichletProblem.cpp  TestForwardUQ_IPL.cpp  TestForwardUQ_Uniform.cpp  TestNeumannProblem.cpp  TestPBR.cpp  TestQoI.cpp  TestSpectralBIOs.cpp  TestSpectralQuantity.cpp
